--- a/exercicios/teste003/estilo.css
+++ b/exercicios/teste003/estilo.css
@@ -59,9 +59,11 @@ a:hover {
 
 
 main {
-    height: 92vh;
+    height: auto;
     width: auto; 
     min-width: 250px;
+    display: flex;
+    flex-direction: column;
 }
 
 .imgtxt, .imgtxt2 {
@@ -112,6 +114,12 @@ main {
 i {
     color: #D6000D;
     margin-right: 20px;
+}
+
+.formulario{
+    width: auto;
+    margin: auto;
+    height: 100px;
 }
 
 .formulario > h2 {
@@ -177,7 +185,6 @@ input::placeholder {
 
 footer {   
     display: flex;
-    flex-shrink: 0;
     background-color: black;
     color: white;
     height: 250px;
@@ -187,5 +194,22 @@ footer {
 }
 
 .ff {
-    margin: 10px;
+    margin: 15px;
+    padding-top: 20px;
+    flex-grow: 1;
+    
 }
+
+.ff > h1 {
+    padding-bottom: 10px;
+}
+
+.ff > h2 {
+    font-size: 1.5em;
+    padding-bottom: 10px;
+}
+
+.ff > p {
+    padding-bottom: 5px;
+}
+
